Fixes for Linux after merging upstream/master into adjust-spacing-only

--- a/client/src/styles/partials/bdsettings/button.scss
+++ b/client/src/styles/partials/bdsettings/button.scss
@@ -54,6 +54,10 @@
         top: 26px;
         padding-bottom: 2px;
     }
+
+    .platform-linux & {
+        top: 0;
+    }
 }
 
 @keyframes bd-settings-button-pulse {
