--- a/client/src/styles/partials/bdsettings/sidebarview.scss
+++ b/client/src/styles/partials/bdsettings/sidebarview.scss
@@ -81,4 +81,8 @@
             padding-top: 22px;
         }
     }
+
+    .platform-linux & {
+        top: 0;
+    }
 }
